--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
-body{
-    background-color: blue;
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+.container{
+    background-color: rgb(0, 173, 253);
+    height: 90vh;
+    width: 90vw;
+    display: flex;
+    padding: 10px;
+}
+
+#ui{
+    background-color: aqua;
+    height: 100%;
+    width: 30%;
+}
+
+#grid{
+    background-color: orange;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px;
+    height: 100%;
+    width: 70%;
+}
+
+.cell{
+    background-color: #00fc3f;
+    border: 1px solid black;
+    height: auto;
 }
