--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+    color: var(--text-color, black);
+}
+
+.main > a{
+    color: var(--text-color, black);
+    text-decoration: none;
+}
+
+.main > a:visited{
+    color: var(--text-color, black);
+    text-decoration: none;
 }
 
 .main > h1{
@@ -43,21 +54,20 @@
     background-color: var(--secondary-color, white);
     height: 100%;
     width: 30%;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.ui-item{
-    margin-bottom: 100px;
+#ui > input{
+    margin-bottom: 50px;
 }
 
 #ui > label{
     color: var(--text-color, "black");
     font-size: 1.5rem;
     margin-bottom: 10px;
-    border-bottom: 1px solid var(--text-color, white);
 }
 
 #grid-slider{
@@ -84,21 +94,21 @@
     background-color: var(--text-color, white);
 }
 
-#clear-grid{
+#ui > .ui-button{
     color: var(--text-color, "black");
     background-color: var(--primary-color, "white");
-    width: 6vw;
+    width: 7vw;
     height: 4.5vh;
     border-radius: 5px;
     border: none;
 }
 
-#clear-grid:hover{
+#ui > .ui-button:hover{
     box-shadow: 0px 0px 5px 5px rgba(241, 232, 230, 0.50);
     transform: scale(1.1);
 }
 
-#clear-grid:active{
+#ui > .ui-button:active{
     transform: scale(1);
 }
 
@@ -108,8 +118,4 @@
     padding: 0px;
     height: 100%;
     width: 70%;
-}
-
-.cell{
-    background-color: #ffffff;
 }
